--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -15,6 +15,7 @@
                     { id:"menu_jobs", text: "{{ "Jobs" | trans }}", img: "job.png" },
                     { id:"menu_alarms", text: "{{ "Alarms" | trans }}", img: "alarm.png" },                    
                     { id:"menu_audit", text: "{{ "Audit" | trans }}", img: "shield.png" },
+                    { id:"menu_errors", text: "{{ "Errors" | trans }}", img: "bug.png" },
                     {   type: "buttonSelect", 
                         text: "{{ "Events" | trans }}", 
                         img:  "cog.png", 
