--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -80,6 +80,9 @@ function ClickRibbon (itemid,state) {
     case 'menu_alarms':
         window.location = "{{ url('arii_ATS_alarms') }}";
         break;
+    case 'menu_errors':
+        window.location = "{{ url('arii_ATS_errors') }}";
+        break;
     case 'menu_audit':
         window.location = "{{ url('arii_ATS_audit') }}";
         break;
