--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -83,6 +83,12 @@ function ClickRibbon (itemid,state) {
     case 'menu_errors':
         window.location = "{{ url('arii_ATS_errors') }}";
         break;
+    case 'menu_servers':
+        window.location = "{{ url('arii_ATS_servers') }}";
+        break;
+    case 'menu_agents':
+        window.location = "{{ url('arii_ATS_agents') }}";
+        break;
     case 'menu_audit':
         window.location = "{{ url('arii_ATS_audit') }}";
         break;
