--- a/Resources/views/Forms/JOB.json.twig
+++ b/Resources/views/Forms/JOB.json.twig
@@ -5,44 +5,38 @@
         labelWidth:"80",
         inputWidth:"200" },
     {   type:"input",    
-            name: "FOLDER", 
-            label:"{{ "Folder" | trans}}"
+            name: "JOB_NAME", 
+            label:"{{ "Job" | trans}}"
     },
     {   type:"input",    
-            name: "AS_APPLICATION", 
-            label:"{{ "Application" | trans}}"
+            name: "DESCRIPTION", 
+            label:"{{ "Description" | trans}}", 
+            rows: 3
     },
     {   type:"input",    
             name: "OWNER", 
-            label:"{{ "Owner" | trans}}", 
-            rows: 3
+            label:"{{ "Owner" | trans}}"
+    },
+    {   type:"input",    
+            name: "MACH_NAME", 
+            label:"{{ "Machine" | trans}}"
     },
     {type:"newcolumn"},
     {   type:"input",    
-            name: "NAME", 
-            label:"{{ "Job" | trans}}"
-    },
-    {   type:"input",    
-            name: "PERMISSION", 
-            label:"{{ "Permission" | trans}}"
-    },
-    {type:"newcolumn"},
-    {   type:"input",    
-            name: "NAME", 
-            label:"{{ "Job" | trans}}"
+            name: "AS_APPLIC", 
+            label:"{{ "Application" | trans}}"
     },
     {   type:"input",    
             name: "AS_GROUP", 
             label:"{{ "Group" | trans}}"
     },
     {   type:"input",    
+            name: "PROFILE", 
+            label:"{{ "Profile" | trans}}"
+    },
+    {   type:"input",    
             name: "PERMISSION", 
             label:"{{ "Permission" | trans}}"
-    },
-    {type:"newcolumn"},
-    {   type:"checkbox",    
-            name: "HAS_OVERRIDE", 
-            label:"{{ "Override" | trans}}"
     },
     {type:"hidden",    name: "ID" }
 ]
