Gestion des calendriers

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -71,6 +71,9 @@ function ClickRibbon (itemid,state) {
     case 'menu_jobs':
         window.location = "{{ url('arii_ATS_jobs') }}";
         break;
+    case 'menu_calendars':
+        window.location = "{{ url('arii_ATS_calendars') }}";
+        break;
     case 'menu_events':
         window.location = "{{ url('arii_ATS_events') }}";
         break;
