--- a/Resources/views/Calendars/timeline.html.twig
+++ b/Resources/views/Calendars/timeline.html.twig
@@ -10,42 +10,6 @@
         <script src="{{ asset('dhtmlx_scheduler/codebase/locale') }}/locale_{{ app.request.locale }}.js" type="text/javascript"></script>
 {% endblock dhtmlx_plus %}
 {% block body %}
-<!--[if !IE]>start section<![endif]-->	
-<div class="section table_section">
-	<!--[if !IE]>start title wrapper<![endif]-->
-	<div class="title_wrapper">
-		<h2>{{ "Events" | trans }}</h2>
-<ul  class="section_menu">
-      <li><a href="{{ url('arii_JID_orders') }}" class=""><span><span><img src="{{ asset('bundles/ariicore/images/wa/list.png') }}"/>&nbsp;{{ "List" | trans }}</span></span></a></li>
-      <li><a href="{{ url('arii_JID_orders_timeline') }}" class="active"><span><span><img src="{{ asset('bundles/ariicore/images/wa/timeline.png') }}"/>&nbsp;{{ "Timeline" | trans }}</span></span></a></li>
-    <li><a href="{{ url('arii_JID_orders_last') }}" class=""><span><span><img src="{{ asset('bundles/ariicore/images/wa/monitor.png') }}"/>&nbsp;{{ "Monitor" | trans }}</span></span></a></li>
-</ul>
-		<span class="title_wrapper_left"></span>
-		<span class="title_wrapper_right"></span>
-	</div>
-	<!--[if !IE]>end title wrapper<![endif]-->
-<!--[if !IE]>start section content<![endif]-->
-	<div class="section_content">
-		<!--[if !IE]>start section content top<![endif]-->
-		<div class="sct">
-			<div class="sct_left">
-				<div class="sct_right">
-					<div class="sct_left">
-                                                <div class="sct_right">
-    <div id="mygrid" style="height:500px;background-color:white;position:relative;overflow:hidden;"></div>
-                                                </div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!--[if !IE]>end section content top<![endif]-->
-		<!--[if !IE]>start section content bottom<![endif]-->
-		<span class="scb"><span class="scb_left"></span><span class="scb_right"></span></span>
-		<!--[if !IE]>end section content bottom<![endif]-->
-		
-	</div>
-	<!--[if !IE]>end section content<![endif]-->
 </div>
 <div id="scheduler_here" class="dhx_cal_container" style='width:100%; height:100%;'>
 <div class="dhx_cal_navline">
@@ -143,15 +107,18 @@ dhtmlxEvent(window,"load",function(){
     }
 
     scheduler.config.readonly = true;
-    scheduler.init('scheduler_here',null, "month");	
-
+    scheduler.init('scheduler_here',null, "month");
+    
     scheduler.load( "{{ url('xml_ATS_calendar') }}" );
     timeline  = globalLayout.cells("b").attachScheduler( new Date() , null, 'scheduler_here', scheduler);
 
     scheduler.attachEvent("onClick",function(id, value){
-        alert(id);
+        globalLayout.cells("c").progressOn();
+        var calendar = scheduler.getUserData(id,"text");
+        myJobs.clearAndLoad( "{{ url('xml_ATS_calendar_jobs') }}?calendar="+calendar, function(loader1){
+            globalLayout.cells("c").progressOff();
+        });
     });
-
 });
 
 function Detail(id) {
