--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -16,7 +16,18 @@
                     { id:"menu_alarms", text: "{{ "Alarms" | trans }}", img: "alarm.png" },                    
                     { id:"menu_audit", text: "{{ "Audit" | trans }}", img: "shield.png" },                    
                     { id:"menu_errors", text: "{{ "Errors" | trans }}", img: "bug.png" },
-                    {   type: "buttonSelect", 
+                    { id:"menu_calendars", text: "{{ "Calendars" | trans }}", img: "calendars.png" },
+/*                    {   type: "buttonSelect", 
+                        text: "{{ "Calendars" | trans }}", 
+                        img:  "calendar.png", 
+                        items:
+                        [ 
+                           { id:"menu_calendars", text: "{{ "List" | trans }}", img: "calendars_info.png" },
+                           { id:"menu_calendars_errors", text: "{{ "Errors" | trans }}", img: "calendars_errors.png" },
+                           { id:"menu_calendars_delete", text: "{{ "Delete" | trans }}", img: "calendars_delete.png" }
+                        ]
+                    },
+*/                   {   type: "buttonSelect", 
                         text: "{{ "Machines" | trans }}", 
                         img:  "server.png", 
                         items:
