Suivi des temps d execution

--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -15,7 +15,8 @@
                     { id:"menu_jobs", text: "{{ "Jobs" | trans }}", img: "job.png" },
                     { id:"menu_alarms", text: "{{ "Alarms" | trans }}", img: "alarm.png" },                    
                     { id:"menu_audit", text: "{{ "Audit" | trans }}", img: "shield.png" },                    
-                    { id:"menu_errors", text: "{{ "Errors" | trans }}", img: "bug.png" },
+                    { id:"menu_errors", text: "{{ "Runtimes" | trans }}", img: "bug.png" },
+//                    { id:"menu_errors", text: "{{ "Errors" | trans }}", img: "bug.png" },
                     { id:"menu_calendars", text: "{{ "Calendars" | trans }}", img: "calendars.png" },
 /*                    {   type: "buttonSelect", 
                         text: "{{ "Calendars" | trans }}", 
