--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "AriiCoreBundle::base.html.twig" %}
 {% block dhtmlx %}
 {% if arii_pro %}
 	<link rel="stylesheet" type="text/css" href="{{ asset('dhtmlx_pro/skins/' ~  skin ~ '/dhtmlx.css') }}" />
