--- a/Resources/views/Calendars/timeline.html.twig
+++ b/Resources/views/Calendars/timeline.html.twig
@@ -10,7 +10,7 @@
         <script src="{{ asset('dhtmlx_scheduler/codebase/locale') }}/locale_{{ app.request.locale }}.js" type="text/javascript"></script>
 {% endblock dhtmlx_plus %}
 {% block body %}
-</div>
+<div>
 <div id="scheduler_here" class="dhx_cal_container" style='width:100%; height:100%;'>
 <div class="dhx_cal_navline">
 <div class="dhx_cal_prev_button">&nbsp;</div>
@@ -28,7 +28,6 @@
 <div class="dhx_cal_data">
 </div>	
 </div>
-<!--[if !IE]>end section<![endif]-->
 <script>
 dhtmlxEvent(window,"load",function(){     
 
