--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -84,7 +84,7 @@ function ClickRibbon (itemid,state) {
         window.location = "{{ url('arii_ATS_alarms') }}";
         break;
     case 'menu_errors':
-        window.location = "{{ url('arii_ATS_errors') }}";
+        window.location = "{{ url('arii_ATS_runtimes') }}";
         break;
     case 'menu_servers':
         window.location = "{{ url('arii_ATS_servers') }}";
