--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -17,6 +17,7 @@
                     { id:"menu_audit", text: "{{ "Audit" | trans }}", img: "shield.png" },                    
                     { id:"menu_errors", text: "{{ "Runtimes" | trans }}", img: "bug.png" },
 //                    { id:"menu_errors", text: "{{ "Errors" | trans }}", img: "bug.png" },
+                    { id:"menu_requests", text: "{{ "Requests" | trans }}", img: "database.png" },
                     { id:"menu_calendars", text: "{{ "Calendars" | trans }}", img: "calendars.png" },
 /*                    {   type: "buttonSelect", 
                         text: "{{ "Calendars" | trans }}", 
